# KeyFrog

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: checks.yml
docs/: ARCHITECTURE.md  QA_REPORT_2026-06-12.md  RELEASE.md
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  db.rs  error.rs  generator.rs  lib.rs  main.rs  models.rs  vault.rs
src/app/: App.tsx  types.ts
src/components/ui/: Button.tsx  Field.tsx  Tabs.tsx
src/features/auth/: SetupScreen.tsx  UnlockScreen.tsx
src/features/generator/: PasswordGenerator.tsx
src/features/settings/: SettingsPanel.tsx
src/features/vault/: EntryEditor.tsx  VaultView.tsx
src/lib/: clipboard.ts  i18n.tsx  settings.ts  tauri.ts
